--- a/kernel-config/release/general/config-6.6
+++ b/kernel-config/release/general/config-6.6
@@ -8300,6 +8300,15 @@ CONFIG_RAS=y
 #
 # Android
 #
+CONFIG_ASHMEM=y
+CONFIG_ANDROID=y
+CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDERFS=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+# CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
+# CONFIG_ANDROID_DEBUG_SYMBOLS is not set
+CONFIG_ANDROID_KABI_RESERVE=y
+CONFIG_ANDROID_VENDOR_OEM_DATA=y
 # CONFIG_ANDROID_BINDER_IPC is not set
 # end of Android
 
