--- a/kernel-config/release/general/config-5.4
+++ b/kernel-config/release/general/config-5.4
@@ -6142,6 +6142,15 @@ CONFIG_VIDEO_SUNXI=y
 #
 # Android
 #
+CONFIG_ASHMEM=y
+CONFIG_ANDROID=y
+CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDERFS=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+# CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
+# CONFIG_ANDROID_DEBUG_SYMBOLS is not set
+CONFIG_ANDROID_KABI_RESERVE=y
+CONFIG_ANDROID_VENDOR_OEM_DATA=y
 # end of Android
 
 # CONFIG_STAGING_BOARD is not set
